made changes to html

--- a/simpleSite.html
+++ b/simpleSite.html
@@ -1,2 +1,6 @@
 <h1>What the heck is going on fools</h1>
 <p>Copyright Elijah Gaytan</p>
+<ul>
+	<li>Linux Fanboy</li>
+	<li>Learning ZSH </li>
+</ul>
