--- a/simpleSite.html
+++ b/simpleSite.html
@@ -1,7 +1,7 @@
 <h1>What the heck is going on fools</h1>
 <p>Copyright Elijah Gaytan</p>
 <ul>
-  <li>Whoa...the freak man</li>
-  <li>This should conflict for a rebase again</li>
-  <li>I be super houngry</li>
+  <li>What the [censored] man</li>
+  <li>This should conflict</li>
+  <li>I am super [redacted]</li>
 </ul>
