adding chnages after rebase conflict

--- a/simpleSite.html
+++ b/simpleSite.html
@@ -4,4 +4,5 @@
   <li>What the [censored] man</li>
   <li>This should conflict</li>
   <li>I am super [redacted]</li>
+  <li>Another change to commit after rebasing</li>
 </ul>
