updating html with another li element

--- a/simpleSite.html
+++ b/simpleSite.html
@@ -5,4 +5,5 @@
   <li>This should conflict</li>
   <li>I am super [redacted]</li>
   <li>Another change to commit after rebasing</li>
+  <li>another change</li>
 </ul>
