[remote] simple change

--- a/simpleSite.html
+++ b/simpleSite.html
@@ -1,5 +1,5 @@
 <h1>What the heck is going on fools</h1>
-<p>Copyright Elijah Gaytan</p>
+<p>Copyright @ Elijah Gaytan</p>
 <ul>
   <li>What the [censored] man</li>
   <li>This should conflict</li>
